// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LifestyleButton Component should match snapshot 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text injectIntl(LifestyleButtons)-lifestyleBtn-1"
    data-testid="btn-questionnaire"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 18 18"
      >
        <path
          d="M17.368 1.584L16.416 0.632C15.994 0.211 15.441 0 14.889 0C14.337 0 13.784 0.211 13.362 0.632L2.954 11.041L0 18L6.959 15.046L17.368 4.638C18.211 3.795 18.211 2.427 17.368 1.584ZM6.276 14.032L2.265 15.734L3.967 11.723L12.421 3.269L14.729 5.577L6.276 14.032ZM16.519 3.789L15.578 4.73L13.27 2.422L14.211 1.481C14.392 1.3 14.633 1.2 14.889 1.2C15.145 1.2 15.386 1.3 15.567 1.481L16.519 2.433C16.893 2.807 16.893 3.415 16.519 3.789Z"
          fill="#333333"
        />
      </svg>
      <div
        class="MuiBox-root MuiBox-root-43"
      >
        Add my lifestyle data
      </div>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`LifestyleButton Component should match snapshot for when user want to update questionnaire 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-text injectIntl(LifestyleButtons)-lifestyleBtn-54"
    data-testid="btn-questionnaire"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        style="width: 1.125rem; height: 1.125rem;"
        viewBox="0 0 18 18"
      >
        <path
          d="M17.368 1.584L16.416 0.632C15.994 0.211 15.441 0 14.889 0C14.337 0 13.784 0.211 13.362 0.632L2.954 11.041L0 18L6.959 15.046L17.368 4.638C18.211 3.795 18.211 2.427 17.368 1.584ZM6.276 14.032L2.265 15.734L3.967 11.723L12.421 3.269L14.729 5.577L6.276 14.032ZM16.519 3.789L15.578 4.73L13.27 2.422L14.211 1.481C14.392 1.3 14.633 1.2 14.889 1.2C15.145 1.2 15.386 1.3 15.567 1.481L16.519 2.433C16.893 2.807 16.893 3.415 16.519 3.789Z"
          fill="#333333"
        />
      </svg>
      <div
        class="MuiBox-root MuiBox-root-96"
      >
        Add my lifestyle data
      </div>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
